--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
         "vuetify": "^3.6.14"
     },
     "dependencies": {
-        "@mdi/font": "^7.4.47"
+        "@mdi/font": "^7.4.47",
+        "@popperjs/core": "^2.11.8",
+        "@sweetalert2/themes": "^5.0.17",
+        "moment": "^2.30.1",
+        "sweetalert2": "^11.12.4",
+        "v-calendar": "^3.1.2",
+        "vue-datepicker-next": "^1.0.3",
+        "vue-sweetalert2": "^5.0.11",
+        "vuejs3-datepicker": "^1.1.3"
     }
 }
